Adding CW files

--- a/war/index.html
+++ b/war/index.html
@@ -43,6 +43,9 @@ ul li a {
 			<li id="Horus Heresy"><a style="border-right:none;" href="./indexISSTVAN.html">Heresy</a></li>
 <!-- 			<li id="epicau"><a style="border-right:none;" href="./indexEPICAU.html">EpicAU</a></li> -->
 			<li id="wm"><a style="border-right:none" href="./indexWM.html">Warmaster</a></li>
+		</ul>
+		<ul style="padding-left:0;margin-top:4em;margin-bottom:4em;">
+			<li id="Clone Wars"><a style="border-right:none;" href="./indexCWNETEA.html">Clone Wars</a></li>
 		</ul>            
 		<p id="info">
 			Check out the discussion on	<a href="http://www.tacticalwargames.net/taccmd/viewtopic.php?f=4&amp;t=18623">Tactical Command</a> for comments, feedback and errors.
