--- a/war/indexCWNETEA.html
+++ b/war/indexCWNETEA.html
@@ -13,7 +13,7 @@
 			<tr>
 				<td>
 					<div class="list"><a href="./chooser.html?list=CW_republic_NETEA"><span><img class="icon" src="img/imperial_eagle.png"/></span>Republic</a></div>
-					<div class="list"><a href="./chooser.html?list=CW_separatist_NETEA"><span><img class="icon" src="img/chaos_icon.png"/></span>Separatists</a></div>
+					<!--<div class="list"><a href="./chooser.html?list=CW_separatist_NETEA"><span><img class="icon" src="img/chaos_icon.png"/></span>Separatists</a></div>-->
 				</td>
                         </tr>
 		</table>
