--- a/war/index.html
+++ b/war/index.html
@@ -68,10 +68,12 @@ ul li a {
 		'EpicUK\'s lists for the UK tournament scene<br>&nbsp;'
 	);});
  $('epicuk').on('mouseout', function() { $('descriptions').update('&nbsp;<br>&nbsp;'); });
- $('epicau').on('mouseover', function() { $('descriptions').update(
-		'EpicAU\'s lists<br>&nbsp;'
-	);});
- $('epicau').on('mouseout', function() { $('descriptions').update('&nbsp;<br>&nbsp;'); });
+
+// $('epicau').on('mouseover', function() { $('descriptions').update(
+//		'EpicAU\'s lists<br>&nbsp;'
+//	);});
+// $('epicau').on('mouseout', function() { $('descriptions').update('&nbsp;<br>&nbsp;'); });
+
  $('ferc').on('mouseover', function() { $('descriptions').update(
 		'Lists developed by the French Epic community<br>&nbsp;'
 	);});
