--- a/war/index.html
+++ b/war/index.html
@@ -81,7 +81,7 @@ ul li a {
  $('horus heresy').on('mouseover', function() { $('descriptions').update(
 		'Lists for the Horus Heresy 30k supplement<br>&nbsp;'
 	);});
- $('horus heresy').on('mouseout', function() { $('descriptions').update('&nbsp;<br>&nbsp;'); });
+// $('horus heresy').on('mouseout', function() { $('descriptions').update('&nbsp;<br>&nbsp;'); });
  $('wm').on('mouseover', function() { $('descriptions').update(
 		'Warmaster Lists<br>&nbsp;'
 	);});
