--- a/war/index.html
+++ b/war/index.html
@@ -78,9 +78,9 @@ ul li a {
 		'Lists developed by the French Epic community<br>&nbsp;'
 	);});
  $('ferc').on('mouseout', function() { $('descriptions').update('&nbsp;<br>&nbsp;'); });
- $('horus heresy').on('mouseover', function() { $('descriptions').update(
-		'Lists for the Horus Heresy 30k supplement<br>&nbsp;'
-	);});
+// $('horus heresy').on('mouseover', function() { $('descriptions').update(
+//		'Lists for the Horus Heresy 30k supplement<br>&nbsp;'
+//	);});
 // $('horus heresy').on('mouseout', function() { $('descriptions').update('&nbsp;<br>&nbsp;'); });
  $('wm').on('mouseover', function() { $('descriptions').update(
 		'Warmaster Lists<br>&nbsp;'
