Adding link to FSD page

--- a/war/index.html
+++ b/war/index.html
@@ -46,7 +46,10 @@ ul li a {
 		</ul>
 		<ul style="padding-left:0;margin-top:4em;margin-bottom:4em;">
 			<li id="Clone Wars NetEA"><a style="border-right:none;" href="./indexCWNETEA.html">Clone Wars</a></li>
-		</ul>            
+		</ul>
+		<ul style="padding-left:0;margin-top:4em;margin-bottom:4em;">
+			<li id="Clone Wars NetEA"><a style="border-right:none;" href="./indexFSD.html">Full Spectrum Dominance</a></li>
+		</ul> 
 		<p id="info">
 			Check out the discussion on	<a href="http://www.tacticalwargames.net/taccmd/viewtopic.php?f=4&amp;t=18623">Tactical Command</a> for comments, feedback and errors.
 			<br>
