--- a/war/indexFSD.html
+++ b/war/indexFSD.html
@@ -18,11 +18,9 @@
                         </tr>
 		</table>
 		<p>
-		These lists have been branched off of the development by the <a href="http://www.tacticalwargames.net/taccmd/viewforum.php?f=109">NetEA</a> community.
+		These lists have been created to aid building army lists for the new Full Spectrum Dominance wargaming rules.
 		<br>
-		Check out the discussion on <a href="http://www.tacticalwargames.net/taccmd/viewtopic.php?f=4&amp;t=18623">Tactical Command</a> for comments, feedback and errors. 
-		<br>
-		This website is unofficial and in no way endorsed by Games Workshop Limited.
+		Check out the Facebook Group at <a href="https://www.facebook.com/groups/fullspectrumdominance/">Full Spectrum Dominance</a>. 
 		</p>
 	</div>
 <script type="text/javascript">
