--- a/war/index.html
+++ b/war/index.html
@@ -31,7 +31,7 @@ ul li a {
 	<div id="main">
 		<p id="descriptions" style="margin-top:4em;color:white;font-family: Helvetica, Arial, sans-serif;">
 			&nbsp;<br>&nbsp;
-		</p>            
+		<!--</p>            
                 <ul style="padding-left:0;margin-top:2em;margin-bottom:3em;">
 			<li id="gw"><a href="./indexGW.html">GW</a></li>
 			<li id="netea"><a href="./indexNETEA.html">NetEA</a></li>
@@ -41,9 +41,8 @@ ul li a {
 		</ul>
 		<ul style="padding-left:0;margin-top:4em;margin-bottom:4em;">
 			<li id="Horus Heresy"><a style="border-right:none;" href="./indexISSTVAN.html">Heresy</a></li>
-<!-- 			<li id="epicau"><a style="border-right:none;" href="./indexEPICAU.html">EpicAU</a></li> -->
 			<li id="wm"><a style="border-right:none" href="./indexWM.html">Warmaster</a></li>
-		</ul>
+		</ul> -->
 		<ul style="padding-left:0;margin-top:4em;margin-bottom:4em;">
 			<li id="Clone Wars NetEA"><a style="border-right:none;" href="./indexCWNETEA.html">Clone Wars</a></li>
 		</ul>
@@ -51,11 +50,9 @@ ul li a {
 			<li id="Clone Wars NetEA"><a style="border-right:none;" href="./indexFSD.html">Full Spectrum Dominance</a></li>
 		</ul> 
 		<p id="info">
-			Check out the discussion on	<a href="http://www.tacticalwargames.net/taccmd/viewtopic.php?f=4&amp;t=18623">Tactical Command</a> for comments, feedback and errors.
+			The Clone Wars Army Lists are for use with Net Epic Armageddon and a growing list of free 3d printable armies by <a href="https://www.facebook.com/MannOWarMiniatures/">Mann O' War Miniatures</a> on Facebook.
 			<br>
-			Note that the picker won't work on out of date browsers (particularly IE7/6).
-			<br>
-			This website is unofficial and in no way endorsed by Games Workshop Limited.
+			The Full Spectrum Dominance Army Lists are for use with the latest Full Spectrum Dominance wargaming rules at <a href="https://www.facebook.com/groups/fullspectrumdominance/">Full Spectrum Dominance</a> on Facebook. 
 		</p>
 	</div>
 <script type="text/javascript">
