--- a/war/index.html
+++ b/war/index.html
@@ -29,9 +29,9 @@ ul li a {
 </head>
 <body>
 	<div id="main">
-		<p id="descriptions" style="margin-top:4em;color:white;font-family: Helvetica, Arial, sans-serif;">
+		<!--<p id="descriptions" style="margin-top:4em;color:white;font-family: Helvetica, Arial, sans-serif;">
 			&nbsp;<br>&nbsp;
-		<!--</p>            
+		</p>            
                 <ul style="padding-left:0;margin-top:2em;margin-bottom:3em;">
 			<li id="gw"><a href="./indexGW.html">GW</a></li>
 			<li id="netea"><a href="./indexNETEA.html">NetEA</a></li>
@@ -44,7 +44,7 @@ ul li a {
 			<li id="wm"><a style="border-right:none" href="./indexWM.html">Warmaster</a></li>
 		</ul> -->
 		<ul style="padding-left:0;margin-top:4em;margin-bottom:4em;">
-			<li id="Clone Wars NetEA"><a style="border-right:none;" href="./indexCWNETEA.html">Clone Wars</a></li>
+			<li id="Clone Wars NetEA"><a style="border-right:none;" href="./indexCWNETEA.html">Net Epic Armageddon: Clone Wars</a></li>
 			<li>The Clone Wars Army Lists are for use with Net Epic Armageddon and a growing list of free 3d printable armies by <a href="https://www.facebook.com/MannOWarMiniatures/">Mann O' War Miniatures</a> on Facebook.</li>
 		</ul>
 		<ul style="padding-left:0;margin-top:4em;margin-bottom:4em;">
