--- a/war/indexFSD.html
+++ b/war/indexFSD.html
@@ -15,7 +15,13 @@
 					<div class="list"><a href="./chooser.html?list=FSD_Enlisted"><span><img class="icon" src="img/imperial_eagle.png"/></span>Enlisted</a></div>
 					<div class="list"><a href="./chooser.html?list=FSD_Tech"><span><img class="icon" src="img/chaos_icon.png"/></span>Tech</a></div>
 				</td>
-                        </tr>
+            </tr>
+			<tr>
+				<td>
+					<div class="list"><a href="./chooser.html?list=FSD_Enlisted"><span><img class="icon" src="img/imperial_eagle.png"/></span>Enlisted</a></div>
+					<div class="list"><a href="./chooser.html?list=FSD_Tech"><span><img class="icon" src="img/chaos_icon.png"/></span>Tech</a></div>
+				</td>
+            </tr>
 		</table>
 		<p>
 		These lists have been created to aid building army lists for the new Full Spectrum Dominance wargaming rules.
