--- a/war/indexCWNETEA.html
+++ b/war/indexCWNETEA.html
@@ -18,6 +18,8 @@
                         </tr>
 		</table>
 		<p>
+		The Clone Wars Army Lists are for use with Net Epic Armageddon and a growing list of free 3d printable armies by <a href="https://www.facebook.com/MannOWarMiniatures/">Mann O' War Miniatures</a> on Facebook.
+		<p>
 		These lists have been branched off of the development by the <a href="http://www.tacticalwargames.net/taccmd/viewforum.php?f=109">NetEA</a> community.
 		<br>
 		Check out the discussion on <a href="http://www.tacticalwargames.net/taccmd/viewtopic.php?f=4&amp;t=18623">Tactical Command</a> for comments, feedback and errors. 
