--- a/war/index.html
+++ b/war/index.html
@@ -45,16 +45,12 @@ ul li a {
 		</ul> -->
 		<ul style="padding-left:0;margin-top:4em;margin-bottom:4em;">
 			<li id="Clone Wars NetEA"><a style="border-right:none;" href="./indexCWNETEA.html">Net Epic Armageddon: Clone Wars</a></li>
-			<li>The Clone Wars Army Lists are for use with Net Epic Armageddon and a growing list of free 3d printable armies by <a href="https://www.facebook.com/MannOWarMiniatures/">Mann O' War Miniatures</a> on Facebook.</li>
 		</ul>
 		<ul style="padding-left:0;margin-top:4em;margin-bottom:4em;">
 			<li id="Clone Wars NetEA"><a style="border-right:none;" href="./indexFSD.html">Full Spectrum Dominance</a></li>
-			<li>The Full Spectrum Dominance Army Lists are for use with the latest Full Spectrum Dominance wargaming rules at <a href="https://www.facebook.com/groups/fullspectrumdominance/">Full Spectrum Dominance</a> on Facebook.</li>
 		</ul> 
 		<p id="info">
-			The Clone Wars Army Lists are for use with Net Epic Armageddon and a growing list of free 3d printable armies by <a href="https://www.facebook.com/MannOWarMiniatures/">Mann O' War Miniatures</a> on Facebook.
-			<br>
-			 
+			Army Lists
 		</p>
 	</div>
 <script type="text/javascript">
