--- a/war/index.html
+++ b/war/index.html
@@ -3,88 +3,26 @@
 <head>
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 	<link rel="icon" type="image/png" href="./favicon.ico">
+	<title>Full Spectrum Dominance - Army Lists</title>
 	<link rel="stylesheet" type="text/css" href="armyforge.css">
-	<title>Armyforge - EA Army Lists</title>
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/prototype/1.7.0.0/prototype.js"></script>
-	<style>	
-#main ul li {
-	display:inline;
-	padding:0;
-}
-#main ul li a:hover {
-	color:orange;
-}
-ul li a {
-	border-right: 1px solid #404000;
-	text-align: center;
-	text-decoration:none;
-	font-family: Helvetica, Arial, sans-serif;
-	font-weight: bold;
-	font-size: 138.5%;
-	color:white;
-	padding:0.4em 3em;
-	text-shadow:-1px -1px 2px #777777;
-}
-	</style>
 </head>
 <body>
-	<div id="main">
-		<!--<p id="descriptions" style="margin-top:4em;color:white;font-family: Helvetica, Arial, sans-serif;">
-			&nbsp;<br>&nbsp;
-		</p>            
-                <ul style="padding-left:0;margin-top:2em;margin-bottom:3em;">
-			<li id="gw"><a href="./indexGW.html">GW</a></li>
-			<li id="netea"><a href="./indexNETEA.html">NetEA</a></li>
-			<li id="epicuk"><a href="./indexEPICUK.html">EpicUK</a></li>
-			<li id="ferc"><a href="./indexFERC.html">FERC</a></li>
-         
-		</ul>
-		<ul style="padding-left:0;margin-top:4em;margin-bottom:4em;">
-			<li id="Horus Heresy"><a style="border-right:none;" href="./indexISSTVAN.html">Heresy</a></li>
-			<li id="wm"><a style="border-right:none" href="./indexWM.html">Warmaster</a></li>
-		</ul> -->
-		<p id="info">
-			Army Lists
+	<div id="main">	
+		<h1>Full Spectrum Dominance - Army Compendium</h1>
+		<table id="ab">
+			<tr>
+				<td>
+					<div class="list"><a href="./chooser.html?list=FSD_Enlisted"><span><img class="icon" src="img/enlisted.png"/></span>Enlisted</a></div>
+					<div class="list"><a href="./chooser.html?list=FSD_Tech"><span><img class="icon" src="img/tech.png"/></span>Tech</a></div>
+				</td>
+            </tr>
+		</table>
+		<p>
+		These lists have been created to aid building army lists for the new Full Spectrum Dominance wargaming rules.
+		<br>
+		Check out the Facebook Group at <a href="https://www.facebook.com/groups/fullspectrumdominance/">Full Spectrum Dominance</a>. 
 		</p>
-		<ul style="padding-left:0;margin-top:4em;margin-bottom:4em;">
-			<li id="Clone Wars NetEA"><a style="border-right:none;" href="./indexCWNETEA.html">Net Epic Armageddon: Clone Wars</a></li>
-		</ul>
-		<ul style="padding-left:0;margin-top:4em;margin-bottom:4em;">
-			<li id="Clone Wars NetEA"><a style="border-right:none;" href="./indexFSD.html">Full Spectrum Dominance</a></li>
-		</ul> 
 	</div>
-<script type="text/javascript">
- $('gw').on('mouseover', function() { $('descriptions').update(
-		'Official lists published by GW <br>(start here if you\'re new to EA)'
-	);});
- $('gw').on('mouseout', function() { $('descriptions').update('&nbsp;<br>&nbsp;'); });
- $('netea').on('mouseover', function() { $('descriptions').update(
-		'Lists developed by NetEA community<br>(find them at the TacticalCommand forums)'
-	);});
- $('netea').on('mouseout', function() { $('descriptions').update('&nbsp;<br>&nbsp;'); });
- $('epicuk').on('mouseover', function() { $('descriptions').update(
-		'EpicUK\'s lists for the UK tournament scene<br>&nbsp;'
-	);});
- $('epicuk').on('mouseout', function() { $('descriptions').update('&nbsp;<br>&nbsp;'); });
-
-// $('epicau').on('mouseover', function() { $('descriptions').update(
-//		'EpicAU\'s lists<br>&nbsp;'
-//	);});
-// $('epicau').on('mouseout', function() { $('descriptions').update('&nbsp;<br>&nbsp;'); });
-
- $('ferc').on('mouseover', function() { $('descriptions').update(
-		'Lists developed by the French Epic community<br>&nbsp;'
-	);});
- $('ferc').on('mouseout', function() { $('descriptions').update('&nbsp;<br>&nbsp;'); });
-// $('horus heresy').on('mouseover', function() { $('descriptions').update(
-//		'Lists for the Horus Heresy 30k supplement<br>&nbsp;'
-//	);});
-// $('horus heresy').on('mouseout', function() { $('descriptions').update('&nbsp;<br>&nbsp;'); });
- $('wm').on('mouseover', function() { $('descriptions').update(
-		'Warmaster Lists<br>&nbsp;'
-	);});
- $('wm').on('mouseout', function() { $('descriptions').update('&nbsp;<br>&nbsp;'); }); 
-</script>
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
