ugly but functionally working. TO ADD: cards and updated stats.

--- a/war/index.html
+++ b/war/index.html
@@ -12,8 +12,8 @@
 		<table id="ab">
 			<tr>
 				<td>
-					<div class="list"><a href="./chooser.html?list=FSD_Enlisted"><span><img class="icon" src="img/enlisted.png"/></span>Enlisted</a></div>
-					<div class="list"><a href="./chooser.html?list=FSD_Tech"><span><img class="icon" src="img/tech.png"/></span>Tech</a></div>
+					<div class="list"><a href="./chooser.html?list=FSD_Enlisted"><span><img class="icon" src="assets/logos/enlisted.png"/></span>Enlisted</a></div>
+					<div class="list"><a href="./chooser.html?list=FSD_Tech"><span><img class="icon" src="assets/logos/tech.png"/></span>Tech</a></div>
 				</td>
             </tr>
 		</table>
